tools/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badge-it-deployment
  labels:
    app: badge-it
spec:
  selector:
    matchLabels:
      app: badge-it
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: badge-it
    spec:
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
      containers:
      - name: api
        image: puf17640/badge-it:latest
        ports:
          - containerPort: ${APP_PORT}
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      - name: mongo
        image: mongo:4.4-rc
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
