tools/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: badge-it-service
spec:
  selector:
    app: badge-it
  ports:
  - name: http
    port: 10001
    targetPort: ${APP_PORT}
  type: ClusterIP
