tools/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badge-it-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: badge-it.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: badge-it-service
            port:
              name: http
